k8s/Project-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: project-depl
spec:
  selector:
    matchLabels:
      app: project-app
  template:
    metadata:
      labels:
        app: project-app
    spec:
      containers:
        - name: project-container
          image: idriss98/project-service:2.0
          resources:
            limits:
               memory: "128Mi"
               cpu: "500m"
            requests:  # Always include requests
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 4500
---
apiVersion: v1
kind: Service
metadata:
    name: project-srv-clusterip
spec:
  selector:
    app: project-app
  ports:
    - name: http  # More conventional than "projects"
      protocol: TCP
      port: 4500  # External port should typically be 80/443
      targetPort: 4500  # Matches containerPort
