k8s/Tasks-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-depl
spec:
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: idriss98/project-tasks:2.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:  # Always include requests
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 4501

---
apiVersion: v1
kind: Service
metadata:
  name: tasks-clusterip-srv
spec:
  selector:
    app: tasks
  ports:
  - name: http
    protocol: TCP
    port: 4501
    targetPort: 4501
